--- a/package.json
+++ b/package.json
@@ -57,10 +57,15 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^10.1.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.9",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "babel-jest": "^29.7.0",
     "commitlint": "^19.3.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^28.6.0",
     "globals": "^15.8.0",
@@ -73,6 +78,7 @@
     "prettier": "3.3.2",
     "prop-types": "^15.8.1",
     "semantic-release": "^24.0.0",
+    "ts-jest": "^29.2.3",
     "typescript": "^5.5.3",
     "vite": "^5.3.3"
   },
