--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.5.0",
   "packageManager": "pnpm@9.6.0",
   "description": "Create a Coons patch for a four-sided shape and manipulate the grid",
-  "main": "dist/coons-patch.js",
   "exports": {
     ".": {
-      "import": "./dist/coons-patch.js",
-      "require": "./dist/index.umd.cjs"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.common.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "files": [
@@ -81,7 +81,8 @@
     "semantic-release": "^24.0.0",
     "ts-jest": "^29.2.3",
     "typescript": "^5.5.3",
-    "vite": "^5.3.3"
+    "vite": "^5.3.3",
+    "vite-plugin-dts": "4.0.0-beta.2"
   },
   "dependencies": {
     "fast-memoize": "^2.5.2",
