refactor: Move types to single file for re-export

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "skipLibCheck": true,
     "useUnknownInCatchVariables": false,
     "typeRoots": ["./src/@types", "./node_modules/@types"],
-    "declaration": true
+    "declaration": true,
+    "declarationDir": "./dist"
   }
 }
