--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "semantic-release": "^24.0.0",
     "ts-jest": "^29.2.3",
     "typedoc": "^0.26.5",
-    "typescript": "^5.5.3",
+    "typescript": "5.4.2",
     "vite": "^5.3.3",
     "vite-plugin-dts": "4.0.0-beta.2"
   },
