--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
   "type": "module",
   "scripts": {
     "prepare": "husky",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js ./tests",
-    "test-watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js ./tests --watchAll",
+    "test": "vitest run",
+    "test-watch": "vitest",
     "test-snapshot": "node ./tests/snapshotData",
     "lint": "pnpm run lint-prettier && pnpm run lint-eslint",
     "lint-prettier": "prettier . --write",
-    "lint-eslint": "eslint './**/*.{ts, js, jcjs}'",
+    "lint-eslint": "eslint './**/*.{ts,js,cjs}'",
     "build": "vite build && pnpm run docs",
     "build-watch": "vite build --watch",
     "docs": "typedoc",
@@ -58,36 +58,32 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.6.0",
-    "@jest/globals": "^29.7.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^10.1.1",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.9",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "babel-jest": "^29.7.0",
     "commitlint": "^19.3.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-vitest": "^0.5.4",
     "globals": "^15.8.0",
     "husky": "^9.0.11",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "jest-extended": "^4.0.2",
     "lint-staged": "^15.2.7",
     "nodemon": "^3.1.4",
     "prettier": "3.3.2",
     "prop-types": "^15.8.1",
     "semantic-release": "^24.0.0",
-    "ts-jest": "^29.2.3",
     "typedoc": "^0.26.5",
     "typescript": "5.4.2",
     "vite": "^5.3.3",
-    "vite-plugin-dts": "3.9.1"
+    "vite-plugin-dts": "3.9.1",
+    "vitest": "^2.0.5",
+    "vtest": "^1.1.0"
   },
   "dependencies": {
     "fast-memoize": "^2.5.2",
