--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/index.common.js",
   "exports": {
     ".": {
-      "import": "./dist/index.common.mjs",
+      "import": "./dist/index.mjs",
       "require": "./dist/index.common.cjs",
       "types": "./dist/index.d.ts",
       "source": "./src/index.ts"
