chore: Simplify cjs filename

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
-      "require": "./dist/index.common.cjs",
+      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts",
       "source": "./src/index.ts"
     }
