--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test-snapshot": "node ./tests/snapshotData",
     "lint": "pnpm run lint-prettier && pnpm run lint-eslint",
     "lint-prettier": "prettier . --write",
-    "lint-eslint": "eslint './**/*.{ts,js,cjs}'",
+    "lint-eslint": "eslint './**/*.{ts,js,cjs}' --fix",
     "build": "vite build && pnpm run docs",
     "build-watch": "vite build --watch",
     "docs": "typedoc",
@@ -69,6 +69,7 @@
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vitest": "^0.5.4",
     "globals": "^15.8.0",
     "husky": "^9.0.11",
@@ -86,6 +87,7 @@
     "vtest": "^1.1.0"
   },
   "dependencies": {
+    "eslint-config-prettier": "^9.1.0",
     "fast-memoize": "^2.5.2",
     "matrix-js": "^1.7.1"
   },
