--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   "type": "module",
   "scripts": {
     "prepare": "husky",
-    "test": "vitest run",
-    "test-watch": "vitest",
+    "test": "vitest run --coverage",
+    "test-watch": "vitest --coverage",
     "test-snapshot": "node ./tests/snapshotData",
     "lint": "pnpm run lint-prettier && pnpm run lint-eslint",
     "lint-prettier": "prettier . --write",
@@ -64,6 +64,7 @@
     "@types/node": "^20.14.9",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
+    "@vitest/coverage-v8": "^2.0.5",
     "commitlint": "^19.3.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
