chore: Remove vitest globals

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test-snapshot": "node ./tests/snapshotData",
     "lint": "pnpm run lint-prettier && pnpm run lint-eslint",
     "lint-prettier": "prettier . --write",
-    "lint-eslint": "eslint './**/*.{ts,js,cjs}' --fix",
+    "lint-eslint": "DEBUG=eslint:cli-engine eslint './**/*.{ts,js,cjs}' --fix",
     "build": "vite build && pnpm run docs",
     "build-watch": "vite build --watch",
     "docs": "typedoc",
@@ -72,7 +72,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vitest": "^0.5.4",
+    "eslint-plugin-vitest": "^0.4.1",
     "globals": "^15.8.0",
     "husky": "^9.0.11",
     "jest-extended": "^4.0.2",
