--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test-snapshot": "node ./tests/snapshotData",
     "lint": "pnpm run lint-prettier && pnpm run lint-eslint",
     "lint-prettier": "prettier . --write",
-    "lint-eslint": "DEBUG=eslint:cli-engine eslint './**/*.{ts,js,cjs}' --fix",
+    "lint-eslint": "eslint './**/*.{ts,js,cjs}' --fix",
     "build": "vite build && pnpm run docs",
     "build-watch": "vite build --watch",
     "docs": "typedoc",
