--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-vitest": "^0.4.1",
     "globals": "^15.8.0",
     "husky": "^9.0.11",
