feat: Reduce API in favour of warp-grid
Remove all but coonsPatch function to warp-grid and accept separate interplations for each axis.

BREAKING CHANGE

--- a/package.json
+++ b/package.json
@@ -88,8 +88,7 @@
     "vitest": "^2.0.5"
   },
   "dependencies": {
-    "fast-memoize": "^2.5.2",
-    "matrix-js": "^1.7.1"
+    "fast-memoize": "^2.5.2"
   },
   "pnpm": {
     "overrides": {
