--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
   "type": "module",
   "scripts": {
     "prepare": "husky",
-    "test": "vitest run --coverage",
-    "test-watch": "vitest --coverage",
+    "test": "vitest run",
+    "test-watch": "vitest",
+    "test-coverage": "vitest run --coverage",
     "test-snapshot": "node ./tests/snapshotData",
     "lint": "pnpm run lint-prettier && pnpm run lint-eslint",
     "lint-prettier": "prettier . --write",
@@ -72,6 +73,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "3.2.0",
     "eslint-plugin-vitest": "^0.4.1",
     "globals": "^15.8.0",
     "husky": "^9.0.11",
