--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,5 @@
 name: Release
-
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 permissions:
   contents: write
@@ -11,32 +7,39 @@ permissions:
   pull-requests: write
 
 jobs:
-  release:
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
-
-      - name: Install dependencies
-        run: pnpm install
-
+      - name: Setup
+        uses: ./.github/workflows/setup.yml
       - name: Lint
         run: pnpm run lint
 
+  test:
+    runs-on: ubuntu-latest
+    needs: [lint]
+    steps:
+      - name: Setup
+        uses: ./.github/workflows/setup.yml
       - name: Test
         run: pnpm run test
 
+  build:
+    runs-on: ubuntu-latest
+    needs: [test]
+    steps:
+      - name: Setup
+        uses: ./.github/workflows/setup.yml
       - name: Build
         run: pnpm run build
 
+  release:
+    needs: [build]
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup
+        uses: ./.github/workflows/setup.yml
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
