--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,8 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup
+      - uses: actions/checkout@v4
+      - id: setup
         uses: ./.github/workflows/setup.yml
       - name: Lint
         run: pnpm run lint
