--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - id: setup
-        uses: ./.github/actions/setup.yml
+        uses: ./.github/actions/setup
       - name: Lint
         run: pnpm run lint
 
@@ -21,7 +21,7 @@ jobs:
     needs: [lint]
     steps:
       - name: Setup
-        uses: ./.github/actions/setup.yml
+        uses: ./.github/actions/setup
       - name: Test
         run: pnpm run test
 
@@ -30,7 +30,7 @@ jobs:
     needs: [test]
     steps:
       - name: Setup
-        uses: ./.github/actions/setup.yml
+        uses: ./.github/actions/setup
       - name: Build
         run: pnpm run build
 
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup
-        uses: ./.github/actions/setup.yml
+        uses: ./.github/actions/setup
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
