--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -2,15 +2,14 @@ name: Shared setup
 
 on: [workflow_call]
 
-jobs:
-  setup:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
-      - name: Install dependencies
-        run: pnpm install
+runs:
+  using: 'composite'
+  steps:
+    - name: Install pnpm
+      uses: pnpm/action-setup@v4
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version-file: '.nvmrc'
+    - name: Install dependencies
+      run: pnpm install
