--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -6,10 +6,13 @@ runs:
   using: 'composite'
   steps:
     - name: Install pnpm
+      shell: bash
       uses: pnpm/action-setup@v4
     - name: Setup Node.js
+      shell: bash
       uses: actions/setup-node@v4
       with:
         node-version-file: '.nvmrc'
     - name: Install dependencies
+      shell: bash
       run: pnpm install
