--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,9 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - id: setup
-        uses: ./.github/actions/setup
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+      - run: pnpm install
       - name: Lint
         run: pnpm run lint
 
@@ -20,8 +20,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [lint]
     steps:
-      - name: Setup
-        uses: ./.github/actions/setup
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+      - run: pnpm install
       - name: Test
         run: pnpm run test
 
@@ -29,8 +30,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test]
     steps:
-      - name: Setup
-        uses: ./.github/actions/setup
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+      - run: pnpm install
       - name: Build
         run: pnpm run build
 
@@ -39,8 +41,9 @@ jobs:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - name: Setup
-        uses: ./.github/actions/setup
+      - uses: pnpm/action-setup@v4
+      - uses: actions/setup-node@v4
+      - run: pnpm install
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
