--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,9 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: pnpm/action-setup@v4
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v4
       - run: pnpm install
       - name: Lint
         run: pnpm run lint
@@ -20,8 +21,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [lint]
     steps:
-      - uses: pnpm/action-setup@v4
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v4
       - run: pnpm install
       - name: Test
         run: pnpm run test
@@ -30,8 +32,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test]
     steps:
-      - uses: pnpm/action-setup@v4
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v4
       - run: pnpm install
       - name: Build
         run: pnpm run build
@@ -41,8 +44,9 @@ jobs:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - uses: pnpm/action-setup@v4
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@v4
       - run: pnpm install
       - name: Release
         env:
