--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           cache: 'pnpm'
+      - uses: pnpm/action-setup@v4
       - name: Lint
         run: pnpm run lint
 
@@ -41,6 +42,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           cache: 'pnpm'
+      - uses: pnpm/action-setup@v4
       - name: Test
         run: pnpm run test
 
@@ -53,6 +55,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           cache: 'pnpm'
+      - uses: pnpm/action-setup@v4
       - name: Build
         run: pnpm run build
 
@@ -66,6 +69,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           cache: 'pnpm'
+      - uses: pnpm/action-setup@v4
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
