--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,20 @@ permissions:
   pull-requests: write
 
 jobs:
+  security:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
+      - uses: pnpm/action-setup@v4
+      - run: pnpm install
+      - name: Audit for vulnerabilities
+        run: 'pnpm run audit-npm-packages'
+
   lint:
     runs-on: ubuntu-latest
+    needs: [security]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
