--- a/package.json
+++ b/package.json
@@ -94,5 +94,10 @@
   },
   "dependencies": {
     "fast-memoize": "^2.5.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "@commitlint/config-conventional>conventional-changelog-conventionalcommits": "8.0.0"
+    }
   }
 }
