--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,24 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:recommended"]
+  "extends": ["config:recommended"],
+  "separateMinorPatch": true,
+  "commitMessage": "chore(deps): Update {{depName}} to v{{newVersion}}",
+  "commitMessageAction": "Update",
+  "labels": ["dependencies"],
+  "lockFileMaintenance": {
+    "enabled": true,
+    "automerge": true
+  },
+  "packageRules": [
+    {
+      "groupName": "devDependencies",
+      "matchUpdateTypes": ["minor", "patch"],
+      "depTypeList": ["devDependencies"]
+    },
+    {
+      "groupName": "dependencies",
+      "matchUpdateTypes": ["minor", "patch"],
+      "depTypeList": ["dependencies"]
+    }
+  ]
 }
