chore(lint): Remove hanging commas is jsonc

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,13 @@
   "semi": false,
   "singleQuote": true,
   "trailingComma": "es5",
-  "singleAttributePerLine": true
+  "singleAttributePerLine": true,
+  "overrides": [
+    {
+      "files": ["*.jsonc"],
+      "options": {
+        "trailingComma": "none"
+      }
+    }
+  ]
 }
