--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended"],
   "separateMinorPatch": true,
+  "prTitle": "chore(deps): Merge pull request #{{prNumber}} from {{branchName}}",
   "commitMessage": "chore(deps): Update {{depName}} to v{{newVersion}}",
   "commitMessageAction": "Update",
   "labels": ["dependencies"],
