--- a/package.json
+++ b/package.json
@@ -58,26 +58,24 @@
   "license": "MIT",
   "devDependencies": {
     "@commitlint/config-conventional": "^19.5.0",
-    "@eslint/js": "^9.6.0",
+    "@eslint/compat": "^1.2.4",
+    "@eslint/js": "^9.16.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.0",
     "@types/node": "^22.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
     "@vitest/coverage-v8": "^2.0.5",
+    "@vitest/eslint-plugin": "^1.1.14",
     "audit-ci": "^7.1.0",
     "commitlint": "^19.3.0",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-ramda": "^2.5.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "4.1.4",
-    "eslint-plugin-vitest": "^0.5.0",
     "globals": "^15.8.0",
     "husky": "^9.0.11",
     "jest-extended": "^4.0.2",
@@ -88,6 +86,7 @@
     "semantic-release": "^24.1.2",
     "typedoc": "^0.26.5",
     "typescript": "5.6.3",
+    "typescript-eslint": "^8.17.0",
     "vite": "^5.3.3",
     "vite-plugin-dts": "4.3.0",
     "vitest": "^2.0.5"
@@ -97,7 +96,6 @@
   },
   "pnpm": {
     "overrides": {
-      "@commitlint/config-conventional>conventional-changelog-conventionalcommits": "^8.0.0",
       "cross-spawn": "^7.0.5"
     }
   }
