--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:recommended"],
+  "extends": ["config:recommended", ":semanticCommits"],
   "separateMinorPatch": true,
-  "prTitle": "chore(deps): Merge pull request #{{prNumber}} from {{branchName}}",
-  "commitMessage": "chore(deps): Update {{depName}} to v{{newVersion}}",
   "commitMessageAction": "Update",
   "labels": ["dependencies"],
   "lockFileMaintenance": {
