chore(renovate): Fix casing of commit title

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
   "extends": ["config:recommended", ":semanticCommits"],
   "separateMinorPatch": true,
   "commitMessageAction": "Update",
+  "commitMessageLowerCase": "never",
   "labels": ["dependencies"],
   "lockFileMaintenance": {
     "enabled": true,
