--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
   },
   "pnpm": {
     "overrides": {
-      "cross-spawn": "^7.0.5"
+      "cross-spawn": "^7.0.5",
+      "conventional-changelog-conventionalcommits": ">= 8.0.0"
     }
   }
 }
