--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "4.1.4",
-    "globals": "^16.0.0",
+    "eslint-plugin-vitest": "^0.5.4",
+    "globals": "^15.8.0",
     "husky": "^9.0.11",
     "jest-extended": "^4.0.2",
     "lint-staged": "^15.2.7",
