--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   "license": "MIT",
   "devDependencies": {
     "@commitlint/config-conventional": "^19.5.0",
+    "@eslint/compat": "^1.2.9",
+    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.16.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
